--- a/OpticalValleyUnite/Classes/UI/WorkOrder/View/YQPartDataCell.xib
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/View/YQPartDataCell.xib
@@ -11,49 +11,58 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="91" id="LTt-H5-u7h" customClass="YQPartDataCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="446" height="91"/>
+        <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="198" id="LTt-H5-u7h" customClass="YQPartDataCell" customModule="OpticalValleyUnite" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="706" height="198"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="LTt-H5-u7h" id="xYV-XU-tXb">
-                <rect key="frame" x="0.0" y="0.0" width="446" height="91"/>
+                <rect key="frame" x="0.0" y="0.0" width="706" height="197.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XKl-pm-tAH">
-                        <rect key="frame" x="18" y="30" width="51" height="31"/>
+                    <switch hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XKl-pm-tAH">
+                        <rect key="frame" x="18" y="83.5" width="51" height="31"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="31" id="Fku-xh-pEa"/>
                             <constraint firstAttribute="width" constant="49" id="RbJ-fB-vLO"/>
                         </constraints>
-                        <connections>
-                            <action selector="switchClick:" destination="LTt-H5-u7h" eventType="valueChanged" id="SsF-60-baJ"/>
-                        </connections>
                     </switch>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LEU-q5-FLU">
+                        <rect key="frame" x="18" y="84" width="46" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="46" id="4HN-Tc-NfV"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="yTE-T7-uAO"/>
+                        </constraints>
+                        <state key="normal" image="Oval"/>
+                        <state key="selected" image="ovalcheck"/>
+                        <connections>
+                            <action selector="switchClick:" destination="LTt-H5-u7h" eventType="touchUpInside" id="Q8z-fz-OZS"/>
+                        </connections>
+                    </button>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L6a-KU-6NE">
-                        <rect key="frame" x="67" y="30" width="77.5" height="31"/>
+                        <rect key="frame" x="67" y="83.5" width="164" height="31"/>
                         <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rL-8T-t26">
-                        <rect key="frame" x="144.5" y="30" width="33" height="31"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7rL-8T-t26">
+                        <rect key="frame" x="231" y="83.5" width="33" height="31"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hw9-pg-Icp">
-                        <rect key="frame" x="177.5" y="30" width="77" height="31"/>
+                        <rect key="frame" x="264" y="83.5" width="164" height="31"/>
                         <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmC-DO-Lqo">
-                        <rect key="frame" x="254.5" y="30" width="33" height="31"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmC-DO-Lqo">
+                        <rect key="frame" x="428" y="83.5" width="33" height="31"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.20000000300000001" green="0.20000000300000001" blue="0.20000000300000001" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r30-5r-sIO">
-                        <rect key="frame" x="287.5" y="30" width="77.5" height="31"/>
+                        <rect key="frame" x="461" y="83.5" width="164" height="31"/>
                         <color key="backgroundColor" red="0.0" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
                     <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bQL-b5-KtA">
-                        <rect key="frame" x="365" y="30" width="72" height="30"/>
+                        <rect key="frame" x="625" y="84" width="72" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="1m6-B0-d7h"/>
                             <constraint firstAttribute="width" constant="72" id="OhZ-vA-lu0"/>
@@ -74,11 +83,13 @@
                     <constraint firstItem="7rL-8T-t26" firstAttribute="centerY" secondItem="xYV-XU-tXb" secondAttribute="centerY" id="NWO-Ah-EzX"/>
                     <constraint firstItem="r30-5r-sIO" firstAttribute="height" secondItem="QmC-DO-Lqo" secondAttribute="height" id="Oa4-mc-bK1"/>
                     <constraint firstItem="QmC-DO-Lqo" firstAttribute="height" secondItem="7rL-8T-t26" secondAttribute="height" id="UMB-aS-fJj"/>
+                    <constraint firstItem="LEU-q5-FLU" firstAttribute="centerY" secondItem="xYV-XU-tXb" secondAttribute="centerY" id="Wwe-88-zmI"/>
                     <constraint firstItem="r30-5r-sIO" firstAttribute="width" secondItem="L6a-KU-6NE" secondAttribute="width" id="XTb-Pt-ZPK"/>
                     <constraint firstItem="bQL-b5-KtA" firstAttribute="leading" secondItem="r30-5r-sIO" secondAttribute="trailing" id="ZQa-l0-rtX"/>
                     <constraint firstItem="hw9-pg-Icp" firstAttribute="width" secondItem="L6a-KU-6NE" secondAttribute="width" id="aXk-is-TpJ"/>
                     <constraint firstAttribute="trailing" secondItem="bQL-b5-KtA" secondAttribute="trailing" constant="9" id="cJU-yz-jM1"/>
                     <constraint firstItem="hw9-pg-Icp" firstAttribute="height" secondItem="7rL-8T-t26" secondAttribute="height" id="ce4-JO-qWb"/>
+                    <constraint firstItem="LEU-q5-FLU" firstAttribute="leading" secondItem="xYV-XU-tXb" secondAttribute="leading" constant="18" id="dNZ-sx-Kyb"/>
                     <constraint firstItem="L6a-KU-6NE" firstAttribute="leading" secondItem="XKl-pm-tAH" secondAttribute="trailing" id="jdr-Bg-bxi"/>
                     <constraint firstItem="r30-5r-sIO" firstAttribute="leading" secondItem="QmC-DO-Lqo" secondAttribute="trailing" id="kZp-Bl-6uC"/>
                     <constraint firstItem="7rL-8T-t26" firstAttribute="height" secondItem="XKl-pm-tAH" secondAttribute="height" id="keZ-1e-6hp"/>
@@ -92,9 +103,13 @@
                 <outlet property="numText" destination="bQL-b5-KtA" id="xVS-sa-kw0"/>
                 <outlet property="part" destination="7rL-8T-t26" id="Ct3-fW-b0h"/>
                 <outlet property="partName" destination="QmC-DO-Lqo" id="OYZ-kV-l0a"/>
-                <outlet property="switch" destination="XKl-pm-tAH" id="jMe-CJ-g4j"/>
+                <outlet property="switch" destination="LEU-q5-FLU" id="QkV-Xr-vi0"/>
             </connections>
-            <point key="canvasLocation" x="-153" y="-300"/>
+            <point key="canvasLocation" x="-668" y="-156"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="Oval" width="22" height="22"/>
+        <image name="ovalcheck" width="20" height="20"/>
+    </resources>
 </document>
