--- a/OpticalValleyUnite/Classes/UI/Login/ViewController/LoginViewController.xib
+++ b/OpticalValleyUnite/Classes/UI/Login/ViewController/LoginViewController.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -20,17 +21,17 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="用户登录" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qgi-0s-q40">
-                    <rect key="frame" x="151" y="29" width="74" height="22"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OVU-智慧运营平台" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qgi-0s-q40">
+                    <rect key="frame" x="109.5" y="29" width="156" height="22"/>
                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VH9-uh-fvG">
-                    <rect key="frame" x="15" y="80" width="345" height="49"/>
+                    <rect key="frame" x="50" y="135" width="275" height="44"/>
                     <subviews>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="用户名" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nJd-Nd-gHv">
-                            <rect key="frame" x="15" y="0.0" width="330" height="49"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入您的帐号" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="nJd-Nd-gHv">
+                            <rect key="frame" x="15" y="0.0" width="260" height="44"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits"/>
@@ -40,7 +41,7 @@
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="nJd-Nd-gHv" secondAttribute="bottom" id="0pp-1e-H18"/>
                         <constraint firstAttribute="trailing" secondItem="nJd-Nd-gHv" secondAttribute="trailing" id="2uw-1s-G8S"/>
-                        <constraint firstAttribute="height" constant="49" id="QIt-V8-5iy"/>
+                        <constraint firstAttribute="height" constant="44" id="QIt-V8-5iy"/>
                         <constraint firstItem="nJd-Nd-gHv" firstAttribute="top" secondItem="VH9-uh-fvG" secondAttribute="top" id="cWV-4M-YkD"/>
                         <constraint firstItem="nJd-Nd-gHv" firstAttribute="leading" secondItem="VH9-uh-fvG" secondAttribute="leading" constant="15" id="i1A-kh-ekq"/>
                     </constraints>
@@ -57,10 +58,10 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sOI-BK-Qds">
-                    <rect key="frame" x="15" y="149" width="345" height="49"/>
+                    <rect key="frame" x="50" y="199" width="275" height="44"/>
                     <subviews>
-                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="密码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="K45-iH-rtq">
-                            <rect key="frame" x="15" y="0.0" width="330" height="49"/>
+                        <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入您的号码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="K45-iH-rtq">
+                            <rect key="frame" x="15" y="0.0" width="260" height="44"/>
                             <nil key="textColor"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
@@ -72,7 +73,7 @@
                         <constraint firstAttribute="trailing" secondItem="K45-iH-rtq" secondAttribute="trailing" id="9hA-m2-HQ7"/>
                         <constraint firstAttribute="bottom" secondItem="K45-iH-rtq" secondAttribute="bottom" id="FU2-wG-wER"/>
                         <constraint firstItem="K45-iH-rtq" firstAttribute="leading" secondItem="sOI-BK-Qds" secondAttribute="leading" constant="15" id="hNt-1m-dF4"/>
-                        <constraint firstAttribute="height" constant="49" id="vwY-xS-LRb"/>
+                        <constraint firstAttribute="height" constant="44" id="vwY-xS-LRb"/>
                     </constraints>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
@@ -87,7 +88,7 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d3g-Wh-NVd">
-                    <rect key="frame" x="15" y="218" width="345" height="49"/>
+                    <rect key="frame" x="50" y="305" width="275" height="49"/>
                     <color key="backgroundColor" red="0.19215686269999999" green="0.64705882349999999" blue="0.89019607840000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="49" id="IhA-Cp-rMt"/>
@@ -104,19 +105,42 @@
                         <action selector="loginBtnClick" destination="-1" eventType="touchUpInside" id="k3t-21-9gW"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="请输入帐号和密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t81-m7-Kbz">
+                    <rect key="frame" x="130.5" y="75" width="114.5" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="64x-oZ-eQU">
+                    <rect key="frame" x="150" y="258" width="75" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="75" id="Ygy-YD-Yjt"/>
+                        <constraint firstAttribute="height" constant="20" id="k6P-TI-b2w"/>
+                    </constraints>
+                    <state key="normal" title="忘记密码&gt;">
+                        <color key="titleColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="forgotPasswordBtnClick:" destination="-1" eventType="touchUpInside" id="F2x-1m-rKa"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="VH9-uh-fvG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="5c0-MB-YF1"/>
+                <constraint firstItem="VH9-uh-fvG" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="50" id="5c0-MB-YF1"/>
+                <constraint firstItem="t81-m7-Kbz" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7Qz-im-mMp"/>
                 <constraint firstItem="sOI-BK-Qds" firstAttribute="top" secondItem="VH9-uh-fvG" secondAttribute="bottom" constant="20" id="J6i-zd-Qpm"/>
-                <constraint firstItem="VH9-uh-fvG" firstAttribute="top" secondItem="Qgi-0s-q40" secondAttribute="bottom" constant="29" id="Seo-Ra-3fs"/>
+                <constraint firstItem="64x-oZ-eQU" firstAttribute="top" secondItem="sOI-BK-Qds" secondAttribute="bottom" constant="15" id="Kz2-nl-hCv"/>
+                <constraint firstAttribute="trailing" secondItem="d3g-Wh-NVd" secondAttribute="trailing" constant="50" id="NGO-Ad-qSH"/>
+                <constraint firstItem="t81-m7-Kbz" firstAttribute="top" secondItem="Qgi-0s-q40" secondAttribute="bottom" constant="24" id="QKL-UE-kaD"/>
+                <constraint firstItem="d3g-Wh-NVd" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="50" id="Qru-uv-C2E"/>
+                <constraint firstItem="VH9-uh-fvG" firstAttribute="top" secondItem="Qgi-0s-q40" secondAttribute="bottom" constant="84" id="Seo-Ra-3fs"/>
+                <constraint firstItem="64x-oZ-eQU" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="SfL-i4-mfX"/>
                 <constraint firstItem="Qgi-0s-q40" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="29" id="ZQv-il-w3h"/>
                 <constraint firstItem="sOI-BK-Qds" firstAttribute="leading" secondItem="VH9-uh-fvG" secondAttribute="leading" id="aSS-uh-olx"/>
-                <constraint firstItem="d3g-Wh-NVd" firstAttribute="top" secondItem="sOI-BK-Qds" secondAttribute="bottom" constant="20" id="c1g-Ke-rAP"/>
+                <constraint firstItem="d3g-Wh-NVd" firstAttribute="top" secondItem="sOI-BK-Qds" secondAttribute="bottom" constant="62" id="c1g-Ke-rAP"/>
                 <constraint firstItem="VH9-uh-fvG" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="ebb-z0-4aO"/>
-                <constraint firstItem="d3g-Wh-NVd" firstAttribute="trailing" secondItem="sOI-BK-Qds" secondAttribute="trailing" id="hce-nt-niu"/>
                 <constraint firstItem="Qgi-0s-q40" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="pTG-UR-KiF"/>
-                <constraint firstItem="d3g-Wh-NVd" firstAttribute="leading" secondItem="sOI-BK-Qds" secondAttribute="leading" id="pwM-ns-SoW"/>
                 <constraint firstItem="sOI-BK-Qds" firstAttribute="trailing" secondItem="VH9-uh-fvG" secondAttribute="trailing" id="zSg-7h-uNz"/>
             </constraints>
         </view>
