--- a/OpticalValleyUnite/Classes/UI/Home/SystemSelection/ViewController/YQSystemSelectionVC.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/SystemSelection/ViewController/YQSystemSelectionVC.xib
@@ -142,10 +142,10 @@
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4PL-4r-Cek">
                     <rect key="frame" x="160.5" y="354.5" width="141" height="128"/>
                     <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="敬请期待" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ov3-ik-x5h">
-                            <rect key="frame" x="46.5" y="78" width="49.5" height="14.5"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="敬请期待!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ov3-ik-x5h">
+                            <rect key="frame" x="44" y="78" width="53" height="15"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" white="0.48999999999999999" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_icon_null" translatesAutoresizingMaskIntoConstraints="NO" id="v3T-qE-7zS">
