--- a/OpticalValleyUnite/Classes/UI/Home/SystemSelection/ViewController/YQSystemSelectionVC.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/SystemSelection/ViewController/YQSystemSelectionVC.xib
@@ -11,6 +11,12 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="YQSystemSelectionVC" customModule="OpticalValleyUnite" customModuleProvider="target">
             <connections>
+                <outlet property="SecondView" destination="lAD-4L-nfb" id="Ii7-Vu-wnd"/>
+                <outlet property="firstView" destination="yo6-gH-MBQ" id="i6d-bX-b9h"/>
+                <outlet property="fiveView" destination="4PL-4r-Cek" id="f3A-Ex-D3g"/>
+                <outlet property="fourVIEW" destination="a7J-NL-baW" id="bsK-iX-kDO"/>
+                <outlet property="sixthView" destination="UmP-29-bpJ" id="FUE-jN-RDn"/>
+                <outlet property="thridView" destination="DAg-Us-bGj" id="Pvs-sH-DKO"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -38,156 +44,32 @@
                     <color key="textColor" red="0.60000002379999995" green="0.60000002379999995" blue="0.60000002379999995" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yo6-gH-MBQ">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yo6-gH-MBQ" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
                     <rect key="frame" x="14" y="221.5" width="141.5" height="128"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智慧物业" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pHE-3E-SZ8">
-                            <rect key="frame" x="46.5" y="78" width="49.5" height="14.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_icon_fire" translatesAutoresizingMaskIntoConstraints="NO" id="bjy-X2-kMx">
-                            <rect key="frame" x="49" y="20" width="43" height="38"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="38" id="8xI-7e-YGd"/>
-                                <constraint firstAttribute="width" constant="43" id="x7P-Dz-OHX"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="bjy-X2-kMx" firstAttribute="centerX" secondItem="yo6-gH-MBQ" secondAttribute="centerX" id="1Wa-W7-bDl"/>
-                        <constraint firstItem="bjy-X2-kMx" firstAttribute="top" secondItem="yo6-gH-MBQ" secondAttribute="top" constant="20" id="IoN-iV-EVp"/>
                         <constraint firstAttribute="height" constant="128" id="Jjw-2X-zzm"/>
-                        <constraint firstItem="pHE-3E-SZ8" firstAttribute="top" secondItem="bjy-X2-kMx" secondAttribute="bottom" constant="20" id="Zbf-IK-rnM"/>
-                        <constraint firstItem="pHE-3E-SZ8" firstAttribute="centerX" secondItem="yo6-gH-MBQ" secondAttribute="centerX" id="gbe-XG-JBg"/>
                     </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lAD-4L-nfb">
+                <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lAD-4L-nfb" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
                     <rect key="frame" x="160.5" y="221.5" width="141" height="128"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智慧电梯" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfD-Hb-R9S">
-                            <rect key="frame" x="46" y="78" width="49.5" height="14.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_icon_elevator" translatesAutoresizingMaskIntoConstraints="NO" id="vej-bm-dSF">
-                            <rect key="frame" x="49" y="20" width="43" height="38"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="43" id="D0P-FG-hWW"/>
-                                <constraint firstAttribute="height" constant="38" id="zRQ-y5-Hms"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="vej-bm-dSF" firstAttribute="centerX" secondItem="lAD-4L-nfb" secondAttribute="centerX" id="04C-ND-0h4"/>
-                        <constraint firstItem="EfD-Hb-R9S" firstAttribute="top" secondItem="vej-bm-dSF" secondAttribute="bottom" constant="20" id="GFb-Pq-dmO"/>
-                        <constraint firstItem="EfD-Hb-R9S" firstAttribute="centerX" secondItem="lAD-4L-nfb" secondAttribute="centerX" id="Jgh-94-S1M"/>
-                        <constraint firstItem="vej-bm-dSF" firstAttribute="top" secondItem="lAD-4L-nfb" secondAttribute="top" constant="20" id="jbO-RO-FHa"/>
-                    </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DAg-Us-bGj">
+                <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DAg-Us-bGj" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
                     <rect key="frame" x="306.5" y="221.5" width="141.5" height="128"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智慧消防" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="U8j-ba-f2h">
-                            <rect key="frame" x="46.5" y="78" width="49.5" height="14.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_icon_property" translatesAutoresizingMaskIntoConstraints="NO" id="UPq-6h-Hfc">
-                            <rect key="frame" x="49.5" y="20" width="43" height="38"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="43" id="ATW-oW-qDT"/>
-                                <constraint firstAttribute="height" constant="38" id="JoY-fP-qu7"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="UPq-6h-Hfc" firstAttribute="centerX" secondItem="DAg-Us-bGj" secondAttribute="centerX" id="BrA-ua-yXg"/>
-                        <constraint firstItem="U8j-ba-f2h" firstAttribute="centerX" secondItem="DAg-Us-bGj" secondAttribute="centerX" id="JS4-6Z-0wP"/>
-                        <constraint firstItem="UPq-6h-Hfc" firstAttribute="top" secondItem="DAg-Us-bGj" secondAttribute="top" constant="20" id="NSA-j6-9Vc"/>
-                        <constraint firstItem="U8j-ba-f2h" firstAttribute="top" secondItem="UPq-6h-Hfc" secondAttribute="bottom" constant="20" id="Yj7-1B-8ai"/>
-                    </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a7J-NL-baW">
+                <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a7J-NL-baW" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
                     <rect key="frame" x="14" y="354.5" width="141.5" height="128"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="智慧园区" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QqH-6N-AcP">
-                            <rect key="frame" x="46.5" y="78" width="49.5" height="14.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_icon_park" translatesAutoresizingMaskIntoConstraints="NO" id="Zw6-Nr-7Qg">
-                            <rect key="frame" x="49" y="20" width="43" height="38"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="38" id="ONV-fZ-cof"/>
-                                <constraint firstAttribute="width" constant="43" id="Zyg-Uj-0cF"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="Zw6-Nr-7Qg" firstAttribute="top" secondItem="a7J-NL-baW" secondAttribute="top" constant="20" id="6oO-Bh-jgp"/>
-                        <constraint firstItem="QqH-6N-AcP" firstAttribute="centerX" secondItem="a7J-NL-baW" secondAttribute="centerX" id="CdT-Gx-wv6"/>
-                        <constraint firstItem="Zw6-Nr-7Qg" firstAttribute="centerX" secondItem="a7J-NL-baW" secondAttribute="centerX" id="HKa-tY-0qy"/>
-                        <constraint firstItem="QqH-6N-AcP" firstAttribute="top" secondItem="Zw6-Nr-7Qg" secondAttribute="bottom" constant="20" id="k3y-kr-r2t"/>
-                    </constraints>
                 </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4PL-4r-Cek">
+                <view tag="4" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4PL-4r-Cek" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
                     <rect key="frame" x="160.5" y="354.5" width="141" height="128"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="敬请期待!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ov3-ik-x5h">
-                            <rect key="frame" x="44" y="78" width="53" height="15"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" white="0.48999999999999999" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="login_icon_null" translatesAutoresizingMaskIntoConstraints="NO" id="v3T-qE-7zS">
-                            <rect key="frame" x="49" y="20" width="43" height="38"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="43" id="ORl-tM-cSF"/>
-                                <constraint firstAttribute="height" constant="38" id="k3Z-um-qp0"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="v3T-qE-7zS" firstAttribute="centerX" secondItem="4PL-4r-Cek" secondAttribute="centerX" id="0kn-Yq-4c6"/>
-                        <constraint firstItem="Ov3-ik-x5h" firstAttribute="centerX" secondItem="4PL-4r-Cek" secondAttribute="centerX" id="GZQ-6k-24O"/>
-                        <constraint firstItem="Ov3-ik-x5h" firstAttribute="top" secondItem="v3T-qE-7zS" secondAttribute="bottom" constant="20" id="sVc-II-455"/>
-                        <constraint firstItem="v3T-qE-7zS" firstAttribute="top" secondItem="4PL-4r-Cek" secondAttribute="top" constant="20" id="wvz-dA-TIU"/>
-                    </constraints>
                 </view>
-                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UmP-29-bpJ">
-                    <rect key="frame" x="306.5" y="354.5" width="141.5" height="128"/>
-                    <subviews>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iGZ-CQ-fDK">
-                            <rect key="frame" x="56" y="78" width="31" height="14.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="bdz-f9-PCP">
-                            <rect key="frame" x="49.5" y="20" width="43" height="38"/>
-                            <constraints>
-                                <constraint firstAttribute="width" constant="43" id="Ths-UT-HKg"/>
-                                <constraint firstAttribute="height" constant="38" id="hBD-eQ-82e"/>
-                            </constraints>
-                        </imageView>
-                    </subviews>
+                <view hidden="YES" tag="5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UmP-29-bpJ" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                    <rect key="frame" x="306" y="354" width="141.5" height="128"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstItem="bdz-f9-PCP" firstAttribute="top" secondItem="UmP-29-bpJ" secondAttribute="top" constant="20" id="MBS-V0-Du3"/>
-                        <constraint firstItem="bdz-f9-PCP" firstAttribute="centerX" secondItem="UmP-29-bpJ" secondAttribute="centerX" id="adA-B3-gWj"/>
-                        <constraint firstItem="iGZ-CQ-fDK" firstAttribute="top" secondItem="bdz-f9-PCP" secondAttribute="bottom" constant="20" id="bS4-h2-mho"/>
-                        <constraint firstItem="iGZ-CQ-fDK" firstAttribute="centerX" secondItem="UmP-29-bpJ" secondAttribute="centerX" id="sZs-3h-kTk"/>
-                    </constraints>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
@@ -230,10 +112,5 @@
     <resources>
         <image name="login_bg" width="360" height="161"/>
         <image name="login_font" width="130" height="34"/>
-        <image name="login_icon_elevator" width="36" height="34"/>
-        <image name="login_icon_fire" width="40" height="36"/>
-        <image name="login_icon_null" width="32" height="32"/>
-        <image name="login_icon_park" width="34" height="36"/>
-        <image name="login_icon_property" width="42" height="37"/>
     </resources>
 </document>
