--- a/OpticalValleyUnite/Classes/UI/Home/View/HomeBtnView.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/View/HomeBtnView.xib
@@ -22,8 +22,8 @@
                         <constraint firstAttribute="width" constant="40" id="cva-u6-pOJ"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="签到" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFq-Bt-uAR">
-                    <rect key="frame" x="0.0" y="64" width="90" height="16"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IFq-Bt-uAR">
+                    <rect key="frame" x="0.0" y="64" width="90" height="0.0"/>
                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                     <nil key="highlightedColor"/>
                 </label>
